# CropFolio

./: .env.example  .gitignore  HACKATHON_BRIEF.md  PITCH.md  README.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_farms_plans_applications.py  003_loans_compliance.py  004_content_feed.py
backend/app/: __init__.py  main.py
backend/app/auth/: __init__.py  dependencies.py  jwt_handler.py  otp_service.py  password_handler.py  schemas.py
backend/app/core/: config.py  constants.py  limiter.py
backend/app/domain/: advisory_prompts.py  ai_prompts.py  bayesian.py  climate.py  compliance_scorer.py  context_builder.py  copula_risk.py  credit_scorer.py  crops.py  fertilizer_matcher.py  fertilizer_optimizer.py  fertilizers.py  field_monitor.py  optimizer.py  results.py  simulator.py
backend/app/infrastructure/: database.py  faostat_yields.py  models.py  nasa_power.py  open_meteo.py  price_correlations.py  sar_pipeline.py  soilgrids.py  wfp_prices.py
backend/app/services/: advisory_service.py  ai_service.py  burmese_report_service.py  climate_service.py  content_service.py  feed_service.py  field_monitor_service.py  (+7 more)
backend/data/: crop_fertilizer_matrix.json  crop_nutrient_requirements.json  faostat_yields.json  fertilizers.json  growth_stage_splits.json  micronutrient_requirements.json  nutrient_interactions.json  soil_profiles.json  townships.json
backend/scripts/: __init__.py  fetch_soil_data.py  seed_from_json.py  update_crop_prices.py
backend/tests/: conftest.py
(+250 files in other folders)
